[gd_scene load_steps=6 format=3 uid="uid://xen1e6wtuwdj"]

[ext_resource type="Script" uid="uid://24tecyni4vfc" path="res://Scenes/main/main.gd" id="1_dwohs"]
[ext_resource type="Texture2D" uid="uid://duiy5x8u0hr7r" path="res://Assets/background.png" id="1_up8sa"]
[ext_resource type="PackedScene" uid="uid://bt6e1unmmq4vq" path="res://Scenes/Player/player.tscn" id="2_30dud"]
[ext_resource type="PackedScene" uid="uid://0p74hchpvfvs" path="res://Scenes/extra/spawner.tscn" id="4_wcurd"]
[ext_resource type="PackedScene" uid="uid://ubd47juplrmv" path="res://Scenes/Ground/ground.tscn" id="5_brlrh"]

[node name="Main" type="Node2D"]
script = ExtResource("1_dwohs")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -62)
scale = Vector2(2, 2)
texture = ExtResource("1_up8sa")
centered = false

[node name="Player" parent="." instance=ExtResource("2_30dud")]
position = Vector2(220, 358)

[node name="Spawner" parent="." instance=ExtResource("4_wcurd")]

[node name="Ground" parent="." instance=ExtResource("5_brlrh")]
position = Vector2(0, 833)

[connection signal="on_game_started" from="Player" to="." method="_on_player_on_game_started"]
[connection signal="on_obstacle_crashed" from="Spawner" to="." method="_on_spawner_on_obstacle_crashed"]
[connection signal="on_player_crsh" from="Ground" to="." method="_on_ground_on_player_crsh"]
